--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 head{
-    color: lightblue;
+    background-color: lightblue;
     text-align: center;
     font-family: Arial;
     font-size: 20px;
