--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ h1 {
     background-color: lightblue;
     text-align: center;
     font-family: Arial;
-    font-size: 20px;
+    font-size: 100px;
 }
 body {
     background-color: green;
-    
+    font-size: 20px
 }
