--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 /* Header: stays fixed at the very top */
 header {
-  position: fixed;
+  position: flex;
   top: 0;
   left: 0;
   width: 100%;
